@@ -1,6 +1,8 @@
 Broker:
 - Fix $SYS/broker/publish/messages/+ counters not being updated for QoS 1, 2
   messages. Closes #1968.
+- mosquitto_connect_bind_async() and mosquitto_connect_bind_v5() should not
+  reset the bind address option if called with bind_address == NULL.
 
 
 2.0.3 - 2020-12-17
